# rio-editor

./: Cargo.toml  README.md  test.txt
src/: main.rs
