[package]
name = "rio-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git="https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor"}
rfd = "0.12.1"
tokio = { version = "1.35.0", features = ["fs"] }
